# crossring

./: .gitignore  CONTRIBUTING.md  CROSSRING.sln  LICENSE.txt  README.md  build.ps1
.github/workflows/: build.yml
CrossringService/: CrossringService.vcxproj
CrossringService/include/: AmsiScanner.h  Common.h  Database.h  EtwMonitor.h  HashUtil.h  LegacySupport.h  MemoryScanner.h  NetworkMonitor.h  PassiveMonitor.h  PersistenceMonitor.h  PipeServer.h  PolicyEnforcer.h  PolicyManager.h  SecurityCore.h  ServiceController.h  UsbMonitor.h  ZeroTrust.h
CrossringService/src/: AmsiScanner.cpp  Database.cpp  EtwMonitor.cpp  HashUtil.cpp  LegacySupport.cpp  MemoryScanner.cpp  NetworkMonitor.cpp  PassiveMonitor.cpp  PassiveMonitor2.cpp  PersistenceMonitor.cpp  PipeServer.cpp  PolicyEnforcer.cpp  SecurityCore.cpp  SecurityCore2.cpp  ServiceController.cpp  UsbMonitor.cpp  ZeroTrust.cpp  main.cpp
CrossringUI/: App.xaml  App.xaml.cs  CrossringUI.csproj  MainWindow.xaml  MainWindow.xaml.cs
CrossringUI/Models/: Models.cs
CrossringUI/Services/: DatabaseService.cs  NotificationService.cs  PipeClient.cs
CrossringUI/Styles/: Colors.xaml  Controls.xaml
CrossringUI/ViewModels/: MainViewModel.cs
CrossringUI/Views/: AuthPromptWindow.xaml  AuthPromptWindow.xaml.cs  FirstRunDialog.xaml  FirstRunDialog.xaml.cs  LimitedModeDialog.xaml  LimitedModeDialog.xaml.cs  NetworkView.xaml  NetworkView.xaml.cs  PersistenceView.xaml  PersistenceView.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
Installer/: CROSSRING.iss
linux/: CMakeLists.txt  build.sh
linux/config/: persistence_paths.conf
linux/desktop/: crossring.desktop
linux/gui/: main.c
linux/include/: apparmor_policy.h  common.h  process_monitor.h
linux/src/: apparmor_policy.cpp  common.cpp  main.cpp  passive_monitor.cpp  persistence_monitor.cpp  process_monitor.cpp  security_core.cpp
linux/systemd/: crossring.service
releases/: BUILD-INFO.txt  GIT-INSTRUCTIONS.txt  INSTALL.txt  QUICKSTART.txt  RELEASE-NOTES-v1.0.23.md
